[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mpesa-tools"
dynamic = ["version"]
description = 'Mpesa Statement to various formats'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["mpesa", "pdf", "csv", "ledger", "finance"]
authors = [
  { name = "jonnieey", email = "johnjahi55@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  'pdfplumber>=0.11.8',
  'pandas>=2.3.3',
  'platformdirs>=4.0.0',
]

[project.scripts]
mpesa-tools = "mpesatools.cli:main"

[project.urls]
Documentation = "https://github.com/jonnieey/mpesatools#readme"
Issues = "https://github.com/jonnieey/mpesatools/issues"
Source = "https://github.com/jonnieey/mpesatools"

[tool.hatch.version]
path = "src/mpesatools/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.dev]
dependencies = [
   "pre-commit<4.0.0,>=3.6.2",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mpesatools tests}"


[tool.coverage.run]
source_pkgs = ["mpesatools", "tests"]
branch = true
parallel = true
omit = [
  "src/mpesatools/__about__.py",
]

[tool.hatch.build]
exclude = [
    "tests/",
    ".github/",
    ".gitignore",
    "*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mpesatools"]

[tool.coverage.paths]
mpesatools = ["src/mpesatools", "*/mpesatools/src/mpesatools"]
tests = ["tests", "*/mpesatools/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
